# AgenticAI-LangGraph

./: main.py  pyproject.toml
AdaptiveRAG/: 4-AdaptiveRAG.ipynb
AgenticRag/: Agentic-RAG-2.ipynb  AgenticRag.ipynb  ReAct.ipynb
AutonomousRAG/: 3-COTRag.ipynb  4-Selfreflection.ipynb  5-QueryPlanningdecomposition.ipynb  6-Iterativeretrieval.ipynb  7-answersynthesis.ipynb  research_notes.txt
CAG/: cache_augment_generation.ipynb
CRAG/: 2-CorrectiveRAG.ipynb
Debugging/: openai_agent.py
Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Evaluation/: rag_evaluation.ipynb
GraphRAG/: experiments.ipynb  promptstrategies.ipynb
Langgraph Basics/: ChainsLanggraph.ipynb  ReActAgents.ipynb  chatbot.ipynb  chatbot_multiple_tools.ipynb  dataclassesstateschema.ipynb  pydantic.ipynb  simplegraph.ipynb
RAGMemory/: ragmemory.ipynb
Streaming/: streaming.ipynb
