[project]
name = "agenticai-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface>=0.0.1",
    "ipython==8.13.2",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.2",
    "python-dotenv>=1.2.1",
]
