[project]
name = "agenticai-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.3.0",
    "faiss-cpu>=1.12.0",
    "fastembed>=0.7.3",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "hf-xet>=1.2.0",
    "huggingface>=0.0.1",
    "ipython==8.13.2",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.1",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
    "langsmith>=0.4.41",
    "pydantic>=2.12.4",
    "pymupdf[fitz]>=1.26.6",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "wikipedia>=1.4.0",
]
